--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
