add ImageBackground and logo to _layout.tsx in (auth) folder

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ EXPO_PUBLIC_APPWRITE_PROJECT_ID=68a4fe6c000fcc7c0f8a
 EXPO_PUBLIC_APPWRITE_PROJECT_NAME="rn_food_delivery"
 EXPO_PUBLIC_APPWRITE_ENDPOINT=https://syd.cloud.appwrite.io/v1
 EXPO_PUBLIC_APPWRITE_DATABASE_ID=68a642fd0033e4c3d153
+EXPO_PUBLIC_APPWRITE_USER_COLLECTION_ID = 68a6446f0005ff6529e8
