add appwrite collections id

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ EXPO_PUBLIC_APPWRITE_PROJECT_NAME="rn_food_delivery"
 EXPO_PUBLIC_APPWRITE_ENDPOINT=https://syd.cloud.appwrite.io/v1
 EXPO_PUBLIC_APPWRITE_DATABASE_ID=68a642fd0033e4c3d153
 EXPO_PUBLIC_APPWRITE_USER_COLLECTION_ID = 68a6446f0005ff6529e8
+EXPO_PUBLIC_APPWRITE_CATEGORIES_COLLECTION_ID = 68ab9f120023c5fa974e
+EXPO_PUBLIC_APPWRITE_MENU_COLLECTIONS_ID=68aba027003e3a569ce1
+EXPO_PUBLIC_APPWRITE_CUSTOMIZATION_COLLECTION_ID=68aba3e500249afb7e5a
+EXPO_PUBLIC_APPWRITE_MENU_CUSTOMIZATION_COLLECTION_ID=68aba602000981a92e2c
+EXPO_PUBLIC_APPWRITE_BUCKET_ID=68aba854000edeed5766
